fix header wrapping

--- a/public/assignment/css/style.css
+++ b/public/assignment/css/style.css
@@ -13,3 +13,7 @@ body {
 ul {
     list-style-type: none;
 }
+
+li {
+    margin:0 0 20px 0;
+}
